style css error found and fixed. alignment issue remains.

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ a:hover {
     background-color: white;
     width: fit-content;
     max-height: 0;
-    overlfow: hidden;
+    overflow: hidden;
     transition: all 0.3 ease-in-out;
 }
 
